--- a/instruments/camp/pure-extermination-camp/chelmno/index.html
+++ b/instruments/camp/pure-extermination-camp/chelmno/index.html
@@ -119,10 +119,12 @@
 						<td> ≥152,000 </td>
 						<td>Jury Court Bonn, 1963/65</td>
 					</tr>
-					<tr>
-						<td class="tf" colspan="2">For sources, see <a href="/bibliography/index.html#Mattogno2017">Mattogno 2017</a>, pp. 107-111.</td>
-					</tr>
 				</tbody>
+<tfoot>
+					<tr>
+						<td colspan="2">For sources, see <a href="/bibliography/index.html#Mattogno2017">Mattogno 2017</a>, pp. 107-111.</td>
+					</tr>
+				</tfoot>
 			</table>
 			<h3>
 				<a id="Forensic"></a>Forensic Findings
