--- a/instruments/tool/open-air-incinerations/index.html
+++ b/instruments/tool/open-air-incinerations/index.html
@@ -221,7 +221,7 @@
 						</th>
 						<th>
 						<p>
-							Bodies per pit
+							Bodies <br>per<br> pit
 						</p>
 						</th>
 						<th>
@@ -398,10 +398,12 @@
 						<td></td>
 						<td></td>
 					</tr>
-					<tr>
-						<th class="tf" colspan="10">Source: <a href="/bibliography/index.html#Mattogno2016b">Mattogno 2016b</a>, p. 28. * Fresh wood required, at 250 kg per body. † Stacking height just for the fresh wood, at 0.9 kg/m&sup3;, and a packing density of 1.4., calculated for the largest pit area indicated. ‡ Together with <a href="/witness/victim/mordowicz-czeslaw/index.html">Czesław Mordowicz</a>.</th>
-					</tr>
 				</tbody>
+<tfoot>
+					<tr>
+						<td colspan="10">Source: <a href="/bibliography/index.html#Mattogno2016b">Mattogno 2016b</a>, p. 28. * Fresh wood required, at 250 kg per body. † Stacking height just for the fresh wood, at 0.9 kg/m&sup3;, and a packing density of 1.4., calculated for the largest pit area indicated. ‡ Together with <a href="/witness/victim/mordowicz-czeslaw/index.html">Czesław Mordowicz</a>.</td>
+					</tr>
+				</tfoot>
 			</table>
 			<p>
 				This is even truer for the alleged depth of the pits in which these pyres were allegedly placed: 1.5 to 4 meters, depending on the witness. With the <a href="/concept/groundwater-level/index.html">groundwater</a> standing close to the surface at <a href="/camp/mixed-purpose-camp/birkenau/index.html">Birkenau</a>, any pit deeper than a meter was in acute danger of filling up with water, thus preventing any fire.
