--- a/list-of-entries/index.html
+++ b/list-of-entries/index.html
@@ -2,31 +2,55 @@
 <html lang="en-US">
 <head>
 <!-- #bbinclude "metatags.incl" -->
-<meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-<link rel="stylesheet" href="/_assets/css/encyclopedia.css" media="screen"><link href="https://encyclopedia.historiographyproject.com/list-of-entries/index.html" rel="canonical">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+	<link rel="stylesheet" href="/_assets/css/encyclopedia.css" media="screen">
+	<link href="https://encyclopedia.historiographyproject.com/list-of-entries/index.html" rel="canonical">
 <!-- end bbinclude -->
 	<title>List of Entries | Holocaust Encyclopedia</title>
 </head>
 <body>
 <!-- #bbinclude "page-header-small.incl" -->
-<header class="header"><a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project"></a></header><main class="container-fluid"><div class="row"><article class="col-md-9">
+<header class="header">
+	<a href="https://www.historiography-project.com/index.php" title="The Holocaust Historiography Project"><img src="/_assets/img/hhlogo2.png" alt="The Holocaust Historiography Project"></a>
+</header>
+<main class="container-fluid">
+	<div class="row">
+		<article class="col-md-9">
 <!-- end bbinclude -->
 <!-- #bbinclude "header.incl" -->
-<h1>Holocaust Encyclopedia</h1><p class="lead">uncensored and unconstrained</p><div id="masthead"></div><nav id="breadcrumbs"></nav>
+			<h1>
+				Holocaust Encyclopedia
+			</h1>
+			<p class="lead">
+				uncensored and unconstrained
+			</p>
+			<div id="masthead">
+			</div>
+			<nav id="breadcrumbs">
+			</nav>
 <!-- end bbinclude -->
 			<h2>
 				List of Entries
 			</h2>
 <!-- #bbinclude "he-search.incl" -->
-<form action="https://www.google.com/search" method="get" class="search-form">
+			<form action="https://www.google.com/search" method="get" class="search-form">
 <!-- Hidden input to restrict search to specific domain -->
-	<input type="hidden" name="sitesearch" value="encyclopedia.historiography-project.com">
-	<div class="search-wrapper">
-		<input type="text" name="q" placeholder="Search the Holocaust Encyclopedia ..." required="">
-		<button type="submit">Search</button>
-	</div>
-</form>
+				<input type="hidden" name="sitesearch" value="encyclopedia.historiography-project.com">
+				<div class="search-wrapper">
+					<input type="text" name="q" placeholder="Search the Holocaust Encyclopedia ..." required="">
+					<button type="submit">Search</button>
+				</div>
+			</form>
 <!-- end bbinclude -->
+			<ul>
+				<li><a href="/introduction/index.html">Introduction</a></li>
+			</ul>
+			<h3>
+				A
+			</h3>
 			<ul>
 				<li><a href="/absurdities/absurd-claims/index.html">absurd claims</a></li>
 				<li><a href="/witness/perpetrator/adametz-gerhard/index.html">Adametz, Gerhard</a></li>
@@ -46,6 +70,11 @@
 				<li><a href="/event/auschwitz-bombing-of-2/index.html">Auschwitz, bombing of</a></li>
 				<li><a href="/location/country/austria/index.html">Austria</a></li>
 				<li><a href="/witness/false-witness/avey-denis/index.html">Avey, Denis</a></li>
+			</ul>
+			<h3>
+				B
+			</h3>
+			<ul>
 				<li><a href="/location/other-crime-scene/babi-yar/index.html">Babi Yar</a></li>
 				<li><a href="/witness/perpetrator/bach-zelewski-erich-von-dem/index.html">Bach-Zelewski, Erich von dem</a></li>
 				<li><a href="/witness/victim/bacon-yehuda/index.html">Bacon, Yehuda</a></li>
@@ -104,6 +133,11 @@
 				<li><a href="/legal/company/buna/index.html">BUNA</a></li>
 				<li><a href="/concept/bunkers/index.html">bunkers</a></li>
 				<li><a href="/witness/perpetrator/burmeister-walter/index.html">Burmeister, Walter</a></li>
+			</ul>
+			<h3>
+				C
+			</h3>
+			<ul>
 				<li><a href="/instruments/camp/camps/index.html">camps</a></li>
 				<li><a href="/instruments/tool/carbon-monoxide/index.html">carbon monoxide</a></li>
 				<li><a href="/category/concept/censorship/index.html">censorship</a></li>
@@ -131,6 +165,11 @@
 				<li><a href="/historical-person/propagandist/czech-danuta/index.html">Czech, Danuta</a></li>
 				<li><a href="/location/country/czechia/index.html">Czechia</a></li>
 				<li><a href="/witness/victim/czechowicz-aron/index.html">Czechowicz, Aron</a></li>
+			</ul>
+			<h3>
+				D
+			</h3>
+			<ul>
 				<li><a href="/instruments/camp/mixed-purpose-camp/dachau/index.html">Dachau</a></li>
 				<li><a href="/location/museum-memorial/dachau-museum/index.html">Dachau Museum</a></li>
 				<li><a href="/legal/trial/dachau-trials/index.html">Dachau Trials</a></li>
@@ -153,6 +192,11 @@
 				<li><a href="/witness/victim/dragon-abraham/index.html">Dragon, Abraham</a></li>
 				<li><a href="/witness/victim/dragon-szlama/index.html">Dragon, Szlama</a></li>
 				<li><a href="/witness/victim/dugin-itzhak/index.html">Dugin, Itzhak</a></li>
+			</ul>
+			<h3>
+				E
+			</h3>
+			<ul>
 				<li><a href="/historical-person/politician/eberl-irmfried/index.html">Eberl, Irmfried</a></li>
 				<li><a href="/witness/victim/edelman-salman/index.html">Edelman, Salman</a></li>
 				<li><a href="/historical-person/ehrenburg-ilya/index.html">Ehrenburg, Ilya</a></li>
@@ -176,6 +220,11 @@
 				<li><a href="/absurdities/explosives-to-erase-corpses/index.html">explosives, to erase corpses</a></li>
 				<li><a href="/instruments/camp/extermination-camps/index.html">extermination camps</a></li>
 				<li><a href="/concept/extirpation/index.html">extirpation</a></li>
+			</ul>
+			<h3>
+				F
+			</h3>
+			<ul>
 				<li><a href="/witness/victim/fabian-bela/index.html">Fabian, Bela</a></li>
 				<li><a href="/witness/victim/faitelson-alex/index.html">Faitelson, Alex</a></li>
 				<li><a href="/witness/victim/fajgielbaum-srul/index.html">Fajgielbaum, Srul</a></li>
@@ -212,6 +261,11 @@
 				<li><a href="/witness/victim/frosch-chaim/index.html">Frosch, Chaim</a></li>
 				<li><a href="/technology/fumigation-gas-chamber/index.html">fumigation gas chambers</a></li>
 				<li><a href="/technology/furnace/index.html">furnace</a></li>
+			</ul>
+			<h3>
+				G
+			</h3>
+			<ul>
 				<li><a href="/witness/victim/gabai-dario/index.html">Gabai, Dario</a></li>
 				<li><a href="/witness/victim/gabai-yaakov/index.html">Gabai, Jaacov</a></li>
 				<li><a href="/witness/victim/gal-gyula/index.html">Gál, Gyula</a></li>
@@ -251,6 +305,11 @@
 				<li><a href="/witness/victim/gulba-franciszek/index.html">Gulba, Franciszek</a></li>
 				<li><a href="/instruments/camp/other-camp/gusen/index.html">Gusen</a></li>
 				<li><a href="/victim-groups/gypsies/index.html">Gypsies</a></li>
+			</ul>
+			<h3>
+				H
+			</h3>
+			<ul>
 				<li><a href="/witness/perpetrator/hahle-johannes/index.html">Hähle, Johannes</a></li>
 				<li><a href="/object/hair-of-deportees/index.html">hair of deportees</a></li>
 				<li><a href="/witness/victim/hanel-salomea/index.html">Hanel, Salomea</a></li>
@@ -281,6 +340,11 @@
 				<li><a href="/witness/perpetrator/hottl-wilhelm/index.html">Höttl, Wilhelm</a></li>
 				<li><a href="/location/country/hungary/index.html">Hungary</a></li>
 				<li><a href="/toxin-chemical/hydrogen-cyanide/index.html">hydrogen cyanide</a></li>
+			</ul>
+			<h3>
+				I
+			</h3>
+			<ul>
 				<li><a href="/legal/company/i-g-farbenindustrie-ag/index.html">I.G. Farbenindustrie AG</a></li>
 				<li><a href="/instruments/instruments-of-extermination/index.html">Instruments of Extermination</a></li>
 				<li><a href="/plan-order/intentionality/index.html">Intentionality</a></li>
@@ -290,12 +354,22 @@
 				<li><a href="/witness/victim/isacovici-salomon/index.html">Isacovici, Salomón</a></li>
 				<li><a href="/witness/perpetrator/israel-bruno/index.html">Israel, Bruno</a></li>
 				<li><a href="/location/country/italy/index.html">Italy</a></li>
+			</ul>
+			<h3>
+				J
+			</h3>
+			<ul>
 				<li><a href="/document/jager-report/index.html">Jäger Report</a></li>
 				<li><a href="/witness/perpetrator/jager-karl/index.html">Jäger, Karl</a></li>
 				<li><a href="/witness/victim/jankowski-stanislaw/index.html">Jankowski, Stanisław</a></li>
 				<li><a href="/instruments/camp/other-camp/janowska-camp/index.html">Janowska Camp</a></li>
 				<li><a href="/instruments/camp/mixed-purpose-camp/jasenovac/index.html">Jasenovac</a></li>
 				<li><a href="/victim-groups/jehovas-witnesses/index.html">Jehova&rsquo;s Witnesses</a></li>
+			</ul>
+			<h3>
+				K
+			</h3>
+			<ul>
 				<li><a href="/witness/perpetrator/kaduk-oswald/index.html">Kaduk, Oswald</a></li>
 				<li><a href="/witness/perpetrator/kaindl-anton/index.html">Kaindl, Anton</a></li>
 				<li><a href="/plan-order/wartime-leader/kaltenbrunner-ernst/index.html">Kaltenbrunner, Ernst</a></li>
@@ -333,6 +407,11 @@
 				<li><a href="/witness/victim/kuklia-vladislav/index.html">Kuklia, Vladislav</a></li>
 				<li><a href="/witness/victim/kula-michal/index.html">Kula, Michał</a></li>
 				<li><a href="/witness/victim/kulka-erich/index.html">Kulka, Erich</a></li>
+			</ul>
+			<h3>
+				L
+			</h3>
+			<ul>
 				<li><a href="/object/lampshades-of-human-skin/index.html">lampshades, of human skin</a></li>
 				<li><a href="/historical-person/propagandist/langbein-hermann/index.html">Langbein, Hermann</a></li>
 				<li><a href="/witness/victim/langfus-leib/index.html">Langfus, Leib</a></li>
@@ -360,6 +439,11 @@
 				<li><a href="/technology/lumberjacks/index.html">lumberjacks</a></li>
 				<li><a href="/location/country/luxembourg/index.html">Luxembourg</a></li>
 				<li><a href="/absurdities/lviv/index.html">Lviv</a></li>
+			</ul>
+			<h3>
+				M
+			</h3>
+			<ul>
 				<li><a href="/location/other-locations/madagascar/index.html">Madagascar</a></li>
 				<li><a href="/instruments/camp/majdanek/index.html">Majdanek</a></li>
 				<li><a href="/location/museum-memorial/majdanek-museum/index.html">Majdanek Museum</a></li>
@@ -389,6 +473,11 @@
 				<li><a href="/witness/victim/muller-filip/index.html">Müller, Filip</a></li>
 				<li><a href="/witness/perpetrator/munch-hans/index.html">Münch, Hans</a></li>
 				<li><a href="/witness/perpetrator/mussfeldt-erich/index.html">Mussfeldt, Erich</a></li>
+			</ul>
+			<h3>
+				N
+			</h3>
+			<ul>
 				<li><a href="/witness/victim/nadsari-marcel/index.html">Nadsari, Marcel</a></li>
 				<li><a href="/witness/victim/nagraba-ludwik/index.html">Nagraba, Ludwik</a></li>
 				<li><a href="/witness/victim/nahon-marco/index.html">Nahon, Marco</a></li>
@@ -402,6 +491,11 @@
 				<li><a href="/witness/victim/nowodowski-dawid/index.html">Nowodowski, Dawid</a></li>
 				<li><a href="/legal/trial/nuremberg-military-tribunals/index.html">Nuremberg Military Tribunals</a></li>
 				<li><a href="/witness/victim/nyiszli-miklos/index.html">Nyiszli, Miklos</a></li>
+			</ul>
+			<h3>
+				O
+			</h3>
+			<ul>
 				<li><a href="/witness/perpetrator/oberhauser-josef/index.html">Oberhauser, Josef</a></li>
 				<li><a href="/witness/victim/obrycki-narcyz-tadeusz/index.html">Obrycki, Narcyz Tadeusz</a></li>
 				<li><a href="/witness/victim/ochshorn-isaac-egon/index.html">Ochshorn, Isaac Egon</a></li>
@@ -414,6 +508,11 @@
 				<li><a href="/location/camps/oranienburg/index.html">Oranienburg</a></li>
 				<li><a href="/witness/victim/ostrovsky-leonid/index.html">Ostrovsky, Leonid</a></li>
 				<li><a href="/legal/company/ostrowski-company/index.html">Ostrowski Company</a></li>
+			</ul>
+			<h3>
+				P
+			</h3>
+			<ul>
 				<li><a href="/concept/packing-density-inside-gas-chamber/index.html">packing density, inside gas chamber</a></li>
 				<li><a href="/witness/victim/paisikovic-dov/index.html">Paisikovic, Dov</a></li>
 				<li><a href="/witness/victim/pankov-vassily/index.html">Pankov, Vassily</a></li>
@@ -445,7 +544,17 @@
 				<li><a href="/manipulation/propaganda/index.html">propaganda</a></li>
 				<li><a href="/witness/victim/puchala-lucjan/index.html">Puchała, Lucjan</a></li>
 				<li><a href="/witness/victim/putzker-fritz/index.html">Putzker, Fritz</a></li>
+			</ul>
+			<h3>
+				Q
+			</h3>
+			<ul>
 				<li><a href="/historical-person/politician/quakernack-walter/index.html">Quakernack, Walter</a></li>
+			</ul>
+			<h3>
+				R
+			</h3>
+			<ul>
 				<li><a href="/witness/victim/rabinowicz-jakub/index.html">Rabinowicz, Jakub</a></li>
 				<li><a href="/witness/victim/rajchman-chil/index.html">Rajchman, Chil</a></li>
 				<li><a href="/witness/victim/rajgrodzki-jerzy/index.html">Rajgrodzki, Jerzy</a></li>
@@ -474,6 +583,11 @@
 				<li><a href="/witness/victim/rosenblum-moritz/index.html">Rosenblum, Moritz</a></li>
 				<li><a href="/witness/victim/rosenthal-maryla/index.html">Rosenthal, Maryla</a></li>
 				<li><a href="/witness/victim/rosin-arnost/index.html">Rosin, Arnošt</a></li>
+			</ul>
+			<h3>
+				S
+			</h3>
+			<ul>
 				<li><a href="/instruments/camp/mixed-purpose-camp/sachsenhausen/index.html">Sachsenhausen</a></li>
 				<li><a href="/witness/victim/sackar-josef/index.html">Sackar, Josef</a></li>
 				<li><a href="/witness/victim/sadowska-rajzla/index.html">Sadowska, Rajzla</a></li>
@@ -535,6 +649,11 @@
 				<li><a href="/document/szlamek-report/index.html">Szlamek Report</a></li>
 				<li><a href="/witness/victim/szmajzner-stanislaw/index.html">Szmajzner, Stanisław</a></li>
 				<li><a href="/witness/victim/szperling-henike/index.html">Szperling, Henike</a></li>
+			</ul>
+			<h3>
+				T
+			</h3>
+			<ul>
 				<li><a href="/witness/victim/tabeau-jerzy/index.html">Tabeau, Jerzy</a></li>
 				<li><a href="/witness/victim/tauber-henryk/index.html">Tauber, Henryk</a></li>
 				<li><a href="/legal/company/tesch-stabenow/index.html">Tesch &amp; Stabenow</a></li>
@@ -553,9 +672,19 @@
 				<li><a href="/historical-person/politician/turner-harald/index.html">Turner, Harald</a></li>
 				<li><a href="/witness/victim/turowski-eugeniusz/index.html">Turowski, Eugeniusz</a></li>
 				<li><a href="/concept/typhus/index.html">typhus</a></li>
+			</ul>
+			<h3>
+				U
+			</h3>
+			<ul>
 				<li><a href="/u/uhlenbrock-kurt/index.html">Uhlenbrock, Kurt</a></li>
 				<li><a href="/u/ukraine/index.html">Ukraine</a></li>
 				<li><a href="/u/uthgenannt-otto/index.html">Uthgenannt, Otto</a></li>
+			</ul>
+			<h3>
+				V
+			</h3>
+			<ul>
 				<li><a href="/witness/victim/vaillant-couturier-marie-claude/index.html">Vaillant-Couturier, Marie-Claude</a></li>
 				<li><a href="/witness/victim/van-den-bergh-siegfried/index.html">van den Bergh, Siegfried</a></li>
 				<li><a href="/redirect/van-herwaarden-maria/index.html">van Herwaarden, Maria</a></li>
@@ -566,6 +695,11 @@
 				<li><a href="/technology/ventilation/index.html">ventilation</a></li>
 				<li><a href="/historical-person/politician/voss-peter/index.html">Voss, Peter</a></li>
 				<li><a href="/witness/victim/vrba-rudolf/index.html">Vrba, Rudolf</a></li>
+			</ul>
+			<h3>
+				W
+			</h3>
+			<ul>
 				<li><a href="/witness/false-witness/wael-monique-de/index.html">Wael, Monique de</a></li>
 				<li><a href="/witness/perpetrator/walter-bernhard/index.html">Walter, Bernhard</a></li>
 				<li><a href="/event/wannsee-conference/index.html">Wannsee Conference</a></li>
@@ -600,8 +734,18 @@
 				<li><a href="/witness/perpetrator/wolff-karl/index.html">Wolff, Karl</a></li>
 				<li><a href="/witness/victim/wolken-otto/index.html">Wolken, Otto</a></li>
 				<li><a href="/instruments/camp/phantom-camp/wolzek/index.html">Wolzek</a></li>
+			</ul>
+			<h3>
+				Y
+			</h3>
+			<ul>
 				<li><a href="/legal/institution/yad-vashem/index.html">Yad Vashem</a></li>
 				<li><a href="/location/country/yugoslavia/index.html">Yugoslavia</a></li>
+			</ul>
+			<h3>
+				Z
+			</h3>
+			<ul>
 				<li><a href="/witness/victim/zabecki-franciszek/index.html">Ząbecki, Franciszek</a></li>
 				<li><a href="/witness/victim/zaydel-matvey/index.html">Zaydel, Matvey</a></li>
 				<li><a href="/legal/institution/zentrale-stelle/index.html">Zentrale Stelle</a></li>
@@ -613,19 +757,37 @@
 				<li><a href="/toxin-chemical/zyklon-b/index.html">Zyklon B</a></li>
 				<li><a href="/technology/zyklon-b-introduction-devices/index.html">Zyklon-B introduction devices</a></li>
 			</ul>
+			<ul>
+				<li><a href="/bibliography/index.html">Bibliography</a></li>
+			</ul>
 <!-- #bbinclude "footer.incl" -->
-</article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
-<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
-
+		</article>
+		<div class="col-md-3">
+			<nav class="navigation" id="nav-hhp">
+			</nav>
+			<hr>
+			<aside id="aside">
+			</aside>
+		</div>
+	</div>
+</main>
+<footer class="footer" id="footer">
+	<p class="text-center">
+		Copyright &copy; 2022-2024 Academic Research Group
+	</p>
+</footer>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous">
+</script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous">
+</script>
 <script>
 	$( "#masthead" ).load( "/_assets/includes/masthead.htm" );
-//	$( "#breadcrumbs" ).load( "nav.htm" );
+	//	$( "#breadcrumbs" ).load( "nav.htm" );
 	$( "#aside" ).load( "/_assets/includes/aside.htm" );
-	$( "#nav-hhp" ).load( "/_assets/includes/nav.htm" );</script>
-<script src="/_assets/bootstrap3_player/bootstrap3_player.js"></script>
-
+	$( "#nav-hhp" ).load( "/_assets/includes/nav.htm" );
+</script>
+<script src="/_assets/bootstrap3_player/bootstrap3_player.js">
+</script>
 <!-- end bbinclude -->
 </body>
 </html>
