--- a/technology/zyklon-b-introduction-devices/index.html
+++ b/technology/zyklon-b-introduction-devices/index.html
@@ -47,122 +47,71 @@
 				<tbody>
 					<tr>
 						<td><a href="/witness/victim/bendel-charles-s/index.html">C.S. Bendel</a></td>
-						<td>
-
-							1
-												</td>
+						<td> 1 </td>
 						<td></td>
 						<td></td>
 						<td></td>
-						<td>
-
-							&bull;
-												</td>
+						<td> &bull; </td>
 						<td></td>
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/bialek-regina/index.html">R. Bialek</a></td>
-						<td>
-
-							1
-												</td>
+						<td> 1 </td>
 						<td></td>
-						<td>
-
-							floor drain
-												</td>
-						<td>
-
-							bombs
-												</td>
+						<td> floor drain </td>
+						<td> bombs </td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/bimko-ada/index.html">A. Bimko</a></td>
-						<td>
-
-							1
-												</td>
+						<td> 1 </td>
 						<td></td>
-						<td>
-
-							showers
-												</td>
+						<td> showers </td>
 						<td></td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/chasan-shaul/index.html">S. Chasan</a></td>
-						<td>
-
-							1
-												</td>
+						<td> 1 </td>
 						<td></td>
 						<td></td>
 						<td></td>
 						<td></td>
-						<td>
-
-							open bottom
-												</td>
+						<td> open bottom </td>
 					</tr>
 					<tr>
-						<td><a href="/witness/victim/chybinski-stanislaw/index.html"><span style="color: #a6a6a6;">S. Chybiński</span></a></td>
-						<td>
-
-							<span style="color: #a6a6a6;">2</span>
-												</td>
+						<td><a href="/witness/victim/chybinski-stanislaw/index.html">S. Chybiński</a></td>
+						<td> 2 </td>
 						<td></td>
-						<td>
-
-							<span style="color: #a6a6a6;">lower air ducts</span>
-												</td>
+						<td> lower air ducts </td>
 						<td></td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/cohen-leon/index.html">L. Cohen</a></td>
-						<td>
-
-							1
-												</td>
+						<td> 1 </td>
 						<td></td>
 						<td></td>
 						<td></td>
-						<td>
-
-							&bull;
-												</td>
+						<td> &bull; </td>
 						<td></td>
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/dragon-szlama/index.html">S. Dragon</a></td>
-						<td>
-
-							1
-												</td>
+						<td> 1 </td>
 						<td></td>
 						<td></td>
 						<td></td>
-						<td>
-
-							&bull;
-												</td>
+						<td> &bull; </td>
 						<td></td>
 					</tr>
 					<tr>
 						<td><a href="/witness/perpetrator/fischer-horst/index.html">H. Fischer</a></td>
-						<td>
-
-							1
-												</td>
-						<td>
-
-							&bull;
-												</td>
+						<td> 1 </td>
+						<td> &bull; </td>
 						<td></td>
 						<td></td>
 						<td></td>
@@ -170,14 +119,8 @@
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/fliamenbaum-david/index.html">D. Fliamenbaum</a></td>
-						<td>
-
-							1
-												</td>
-						<td>
-
-							&bull;
-												</td>
+						<td> 1 </td>
+						<td> &bull; </td>
 						<td></td>
 						<td></td>
 						<td></td>
@@ -185,179 +128,107 @@
 					</tr>
 					<tr>
 						<td><a href="/witness/perpetrator/franke-gricksch-alfred/index.html">Franke-Gricksch</a></td>
-						<td>
-
-							1
-												</td>
+						<td> 1 </td>
 						<td></td>
 						<td></td>
 						<td></td>
-						<td>
-
-							pillars
-												</td>
+						<td> pillars </td>
 						<td></td>
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/gabai-yaakov/index.html">Y. Gabai</a></td>
-						<td>
-
-							1
-												</td>
+						<td> 1 </td>
 						<td style="height: 34px; text-align: center;">barred glass window</td>
 						<td></td>
 						<td></td>
-						<td>
-
-							pipes
-												</td>
+						<td> pipes </td>
 						<td></td>
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/gertner-szaja/index.html">S. Gertner</a></td>
-						<td>
-
-							1
-												</td>
-						<td>
-
-							window
-												</td>
+						<td> 1 </td>
+						<td> window </td>
 						<td></td>
 						<td></td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
-						<td><a href="/witness/victim/kaufmann-jeannette/index.html"><span style="color: #a6a6a6;">J. Kaufmann</span></a></td>
-						<td>
-
-							<span style="color: #a6a6a6;">2</span>
-												</td>
+						<td><a href="/witness/victim/kaufmann-jeannette/index.html">J. Kaufmann</a></td>
+						<td> 2 </td>
 						<td></td>
-						<td>
-
-							<span style="color: #a6a6a6;">showers</span>
-												</td>
+						<td> showers </td>
 						<td></td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
-						<td><a href="/witness/victim/kaufmann-schafranov-sofia/index.html"><span style="color: #a6a6a6;">S. Kaufmann</span></a></td>
-						<td>
-
-							<span style="color: #a6a6a6;">2</span>
-												</td>
+						<td><a href="/witness/victim/kaufmann-schafranov-sofia/index.html">S. Kaufmann</a></td>
+						<td> 2 </td>
 						<td></td>
-						<td>
-
-							<span style="color: #a6a6a6;">showers</span>
-												</td>
+						<td> showers </td>
 						<td></td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
-						<td><a href="/witness/victim/kertesz-imre/index.html"><span style="color: #a6a6a6;">I. Kertész</span></a></td>
-						<td>
-
-							<span style="color: #a6a6a6;">2</span>
-												</td>
+						<td><a href="/witness/victim/kertesz-imre/index.html">I. Kertész</a></td>
+						<td> 2 </td>
 						<td></td>
-						<td>
-
-							<span style="color: #a6a6a6;">showers</span>
-												</td>
+						<td> showers </td>
 						<td></td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/kula-michal/index.html">M. Kula</a></td>
-						<td>
-
-							1
-												</td>
+						<td> 1 </td>
 						<td></td>
 						<td></td>
 						<td></td>
 						<td></td>
-						<td>
-
-							&bull;
-												</td>
+						<td> &bull; </td>
 					</tr>
 					<tr>
-						<td><a href="/witness/victim/kulka-erich/index.html"><span style="color: #a6a6a6;">E. Kulka</span></a></td>
-						<td>
-
-							<span style="color: #a6a6a6;">2</span>
-												</td>
+						<td><a href="/witness/victim/kulka-erich/index.html">E. Kulka</a></td>
+						<td> 2 </td>
 						<td></td>
 						<td></td>
 						<td></td>
-						<td>
-
-							<span style="color: #a6a6a6;">pillars</span>
-												</td>
+						<td> pillars </td>
 						<td></td>
 					</tr>
 					<tr>
-						<td><a href="/witness/victim/lequeux-maurice/index.html"><span style="color: #a6a6a6;">M. Lequeux</span></a></td>
-						<td>
-
-							<span style="color: #a6a6a6;">2</span>
-												</td>
+						<td><a href="/witness/victim/lequeux-maurice/index.html">M. Lequeux</a></td>
+						<td> 2 </td>
 						<td></td>
 						<td></td>
 						<td></td>
 						<td></td>
-						<td>
-
-							<span style="color: #a6a6a6;">grated column</span>
-												</td>
+						<td> grated column </td>
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/lewental-salmen/index.html">S. Lewental</a></td>
-						<td>
-
-							1
-												</td>
-						<td>
-
-							upper doors
-												</td>
+						<td> 1 </td>
+						<td> upper doors </td>
 						<td></td>
 						<td></td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
-						<td><a href="/witness/victim/lewinska-pelagia/index.html"><span style="color: #a6a6a6;">P. Lewińska</span></a></td>
-						<td>
-
-							<span style="color: #a6a6a6;">2</span>
-												</td>
+						<td><a href="/witness/victim/lewinska-pelagia/index.html">P. Lewińska</a></td>
+						<td> 2 </td>
 						<td></td>
-						<td>
-
-							<span style="color: #a6a6a6;">showers</span>
-												</td>
+						<td> showers </td>
 						<td></td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
-						<td><a href="/witness/victim/lichtenstein-mordecai/index.html"><span style="color: #a6a6a6;">M. Lichtenstein</span></a></td>
-						<td>
-
-							<span style="color: #a6a6a6;">2</span>
-												</td>
-						<td>
-
-							<span style="color: #a6a6a6;">1 hatch</span>
-												</td>
+						<td><a href="/witness/victim/lichtenstein-mordecai/index.html">M. Lichtenstein</a></td>
+						<td> 2 </td>
+						<td> 1 hatch </td>
 						<td></td>
 						<td></td>
 						<td></td>
@@ -365,47 +236,26 @@
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/litwinska-sofia/index.html">S. Litwinska</a></td>
-						<td>
-
-							1
-												</td>
+						<td> 1 </td>
 						<td></td>
-						<td>
-
-							windows
-												</td>
+						<td> windows </td>
 						<td></td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/mandelbaum-henryk/index.html">H. Mandelbaum</a></td>
-						<td>
-
-							1
-												</td>
+						<td> 1 </td>
 						<td></td>
-						<td>
-
-							windows
-												</td>
+						<td> windows </td>
 						<td></td>
 						<td></td>
-						<td>
-
-							screen columns*
-												</td>
+						<td> screen columns* </td>
 					</tr>
 					<tr>
-						<td><a href="/witness/victim/marcus-kurt/index.html"><span style="color: #a6a6a6;">K. Marcus</span></a></td>
-						<td>
-
-							<span style="color: #a6a6a6;">2</span>
-												</td>
-						<td>
-
-							<span style="color: #a6a6a6;">through hole onto net</span>
-												</td>
+						<td><a href="/witness/victim/marcus-kurt/index.html">K. Marcus</a></td>
+						<td> 2 </td>
+						<td> through hole onto net </td>
 						<td></td>
 						<td></td>
 						<td></td>
@@ -413,137 +263,84 @@
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/muller-filip/index.html">F. Müller</a></td>
-						<td>
-
-							1
-												</td>
+						<td> 1 </td>
 						<td></td>
 						<td></td>
 						<td></td>
-						<td>
-
-							scattering spiral
-												</td>
+						<td> scattering spiral </td>
 						<td></td>
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/nadsari-marcel/index.html">M. Nadsari</a></td>
-						<td>
-
-							1
-												</td>
-						<td>
-
-							&bull;
-												</td>
+						<td> 1 </td>
+						<td> &bull; </td>
 						<td></td>
 						<td></td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
-						<td><a href="/witness/victim/nahon-marco/index.html"><span style="color: #a6a6a6;">M. Nahon</span></a></td>
-						<td>
-
-							<span style="color: #a6a6a6;">2</span>
-												</td>
+						<td><a href="/witness/victim/nahon-marco/index.html">M. Nahon</a></td>
+						<td> 2 </td>
 						<td></td>
 						<td></td>
-						<td>
-
-							<span style="color: #a6a6a6;">flask thru window</span>
-												</td>
+						<td> flask thru window </td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/nyiszli-miklos/index.html">M. Nyiszli</a></td>
-						<td>
-
-							1
-												</td>
+						<td> 1 </td>
 						<td></td>
 						<td></td>
 						<td></td>
-						<td>
-
-							&bull;
-												</td>
+						<td> &bull; </td>
 						<td></td>
 					</tr>
 					<tr>
-						<td><a href="/witness/victim/obrycki-narcyz-tadeusz/index.html"><span style="color: #a6a6a6;">N.T. Obrycki</span></a></td>
-						<td>
-
-							<span style="color: #a6a6a6;">2</span>
-												</td>
+						<td><a href="/witness/victim/obrycki-narcyz-tadeusz/index.html">N.T. Obrycki</a></td>
+						<td> 2 </td>
 						<td></td>
 						<td></td>
-						<td>
-
-							<span style="color: #a6a6a6;">cartridge</span>
-												</td>
+						<td> cartridge </td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/ochshorn-isaac-egon/index.html">I.E. Ochshorn</a></td>
-						<td>
-
-							1
-												</td>
+						<td> 1 </td>
 						<td></td>
 						<td></td>
-						<td>
-
-							bombs
-												</td>
+						<td> bombs </td>
 						<td></td>
 						<td></td>
 					</tr>
-					<tr style="height: 92px;">
-						<td style="height: 92px;"><a href="/witness/victim/paisikovic-dov/index.html">D. Paisikovic</a></td>
-						<td style="height: 92px;">
+					<tr>
+						<td><a href="/witness/victim/paisikovic-dov/index.html">D. Paisikovic</a></td>
+						<td>
 						<p>
-							1
-												</td>
-						<td style="height: 92px;"></td>
-						<td style="height: 92px;"></td>
-						<td style="height: 92px;"></td>
-						<td style="height: 92px;"></td>
-						<td style="height: 92px;">
+							1 </td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>
 						<p>
-							net around concrete columns
-												</td>
+							net around concrete columns </td>
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/piazza-bruno/index.html">B. Piazza</a></td>
-						<td>
-
-							1/2
-												</td>
-						<td>
-
-							CN powder on floor (1)†
-												</td>
+						<td> 1/2 </td>
+						<td> CN powder on floor (1)† </td>
 						<td></td>
-						<td>
-
-							<span style="color: #a6a6a6;">cylinders (2)</span>
-												</td>
+						<td> cylinders (2) </td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/pilo-aaron/index.html">A. Pilo</a></td>
-						<td>
-
-							1
-												</td>
-						<td>
-
-							&bull;
-												</td>
+						<td> 1 </td>
+						<td> &bull; </td>
 						<td></td>
 						<td></td>
 						<td></td>
@@ -551,14 +348,8 @@
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/plucer-regina/index.html">R. Plucer</a></td>
-						<td>
-
-							1
-												</td>
-						<td>
-
-							10 chimneys
-												</td>
+						<td> 1 </td>
+						<td> 10 chimneys </td>
 						<td></td>
 						<td></td>
 						<td></td>
@@ -566,134 +357,80 @@
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/putzker-fritz/index.html">F. Putzker</a></td>
-						<td>
-
-							1
-												</td>
-						<td>
-
-							gas doors
-												</td>
+						<td> 1 </td>
+						<td> gas doors </td>
 						<td></td>
 						<td></td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
-						<td><a href="/witness/victim/rogerie-andre/index.html"><span style="color: #a6a6a6;">A. Rogerie</span></a></td>
-						<td>
-
-							<span style="color: #a6a6a6;">2</span>
-												</td>
+						<td><a href="/witness/victim/rogerie-andre/index.html">A. Rogerie</a></td>
+						<td> 2 </td>
 						<td></td>
-						<td>
-
-							<span style="color: #a6a6a6;">showers</span>
-												</td>
+						<td> showers </td>
 						<td></td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/sackar-josef/index.html">J. Sackar</a></td>
-						<td>
-
-							1
-												</td>
+						<td> 1 </td>
 						<td></td>
 						<td></td>
 						<td></td>
 						<td></td>
-						<td>
-
-							&bull;
-												</td>
+						<td> &bull; </td>
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/sompolinski-roman/index.html">R. Sompolinski</a></td>
-						<td>
-
-							1
-												</td>
+						<td> 1 </td>
 						<td></td>
-						<td>
-
-							turned on
-												</td>
+						<td> turned on </td>
 						<td></td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/tabeau-jerzy/index.html">J. Tabeau</a></td>
-						<td>
-
-							<span style="color: #a6a6a6;">2</span>
-												</td>
+						<td> 2 </td>
 						<td></td>
 						<td></td>
-						<td>
-
-							<span style="color: #a6a6a6;">bombs</span>
-												</td>
+						<td> bombs </td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/tauber-henryk/index.html">H. Tauber</a></td>
-						<td>
-
-							1
-												</td>
+						<td> 1 </td>
 						<td></td>
 						<td></td>
 						<td></td>
 						<td></td>
-						<td>
-
-							&bull;
-												</td>
+						<td> &bull; </td>
 					</tr>
 					<tr>
-						<td><a href="/witness/victim/vaillant-couturier-marie-claude/index.html"><span style="color: #a6a6a6;">M.C. Vaillant-C.</span></a></td>
-						<td>
-
-							<span style="color: #a6a6a6;">2</span>
-												</td>
+						<td><a href="/witness/victim/vaillant-couturier-marie-claude/index.html">M.C. Vaillant-C.</a></td>
+						<td> 2 </td>
 						<td></td>
 						<td></td>
-						<td>
-
-							<span style="color: #a6a6a6;">capsules</span>
-												</td>
+						<td> capsules </td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/venezia-shlomo/index.html">S. Venezia</a></td>
-						<td>
-
-							1
-												</td>
-						<td>
-
-							1 manhole
-												</td>
+						<td> 1 </td>
+						<td> 1 manhole </td>
 						<td></td>
 						<td></td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
-						<td><a href="/witness/victim/vrba-rudolf/index.html"><span style="color: #a6a6a6;">Vrba/Wetzler</span></a></td>
-						<td>
-
-							<span style="color: #a6a6a6;">2</span>
-												</td>
-						<td>
-
-							<span style="color: #a6a6a6;">3 traps</span>
-												</td>
+						<td><a href="/witness/victim/vrba-rudolf/index.html">Vrba/Wetzler</a></td>
+						<td> 2 </td>
+						<td> 3 traps </td>
 						<td></td>
 						<td></td>
 						<td></td>
@@ -701,39 +438,28 @@
 					</tr>
 					<tr>
 						<td><a href="/witness/victim/weiss-janda/index.html">J. Weiss</a></td>
-						<td>
-
-							1
-												</td>
+						<td> 1 </td>
 						<td></td>
 						<td></td>
 						<td></td>
-						<td>
-
-							3 fan columns
-												</td>
+						<td> 3 fan columns </td>
 						<td></td>
 					</tr>
 					<tr>
-						<td><a href="/witness/victim/wetzler-alfred/index.html"><span style="color: #a6a6a6;">A. Wetzler</span></a></td>
-						<td>
-
-							<span style="color: #a6a6a6;">2</span>
-												</td>
-						<td>
-
-							<span style="color: #a6a6a6;">thru showers</span>
-												</td>
+						<td><a href="/witness/victim/wetzler-alfred/index.html">A. Wetzler</a></td>
+						<td> 2 </td>
+						<td> thru showers </td>
 						<td></td>
 						<td></td>
 						<td></td>
 						<td></td>
 					</tr>
+					<tfoot>
 					<tr>
-						<td class="tf" colspan="7">* after gassing, gas release continued, hence pellets not retrievable.<br />
+						<td colspan="7">* after gassing, gas release continued, hence pellets not retrievable.<br />
 						† gas activated by turning on water showers.</td>
 					</tr>
-				</tbody>
+					</tfoot>
 			</table>
 			<p>
 				As each entry for these witnesses demonstrate, all their testimonies are filled with exaggerations, inventions, impossible claims and distortions. Hence, none of these witnesses are trustworthy. Therefore, there is no reason to give any of the claimed methods of introducing Zyklon B precedence over the others. Even more so since there exists no material or documental trace for any Zyklon-B introduction device or method. Furthermore, detailed investigations of the ruins of Morgue #1 of Crematorium II have demonstrated that the holes claimed by many to have been used to throw in Zyklon B (or to attach any claimed introduction devices, columns or pillars) did not exist during the war.
