--- a/list-of-entries/index.html
+++ b/list-of-entries/index.html
@@ -658,11 +658,7 @@
 			<h3>
 				U
 			</h3>
-			<ul>
-				<li><a href="/u/uhlenbrock-kurt/index.html">Uhlenbrock, Kurt</a></li>
-				<li><a href="/u/ukraine/index.html">Ukraine</a></li>
-				<li><a href="/u/uthgenannt-otto/index.html">Uthgenannt, Otto</a></li>
-			</ul>
+			<div id="u-section"></div>
 			<h3>
 				V
 			</h3>
@@ -756,5 +752,11 @@
 <script src="/_assets/bootstrap3_player/bootstrap3_player.js"></script>
 
 <!-- end bbinclude -->
+<script>
+	$(document).ready(function() {
+	$( "#u-section" ).load( "/u/index.html #u-listing" );
+	});
+</script>
+
 </body>
 </html>
