--- a/u/index.html
+++ b/u/index.html
@@ -17,11 +17,13 @@
 			<h2>
 				U
 			</h2>
-			<ul>
-				<li><a href="/u/uhlenbrock-kurt/index.html">Uhlenbrock, Kurt</a></li>
-				<li><a href="/u/ukraine/index.html">Ukraine</a></li>
-				<li><a href="/u/uthgenannt-otto/index.html">Uthgenannt, Otto</a></li>
-			</ul>
+			<div id="u-listing">
+				<ul>
+					<li><a href="/u/uhlenbrock-kurt/index.html">Uhlenbrock, Kurt</a></li>
+					<li><a href="/u/ukraine/index.html">Ukraine</a></li>
+					<li><a href="/u/uthgenannt-otto/index.html">Uthgenannt, Otto</a></li>
+				</ul>
+			</div>
 <!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
